fix for overflow scrollbars

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,7 @@
 .welcome {
-    background-color: blueviolet;
+    background-image: linear-gradient(to right bottom, #30018B, #7C0B9E);
     height: 100vh;
     width: 100%;
     position: fixed;
-    overflow: scroll;
-    scroll-behavior: smooth;
+    overflow: auto;
 }
